tests-integration/fixtures/checking/171_derive_newtype_class_not_newtype/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
NotANewtype :: Int -> NotANewtype

Types
NotANewtype :: Type

Data
NotANewtype
  Quantified = :0
  Kind = :0


Roles
NotANewtype = []

Diagnostics
error[ExpectedNewtype]: Expected a newtype, got: NotANewtype
  --> 7:1..7:38
  |
7 | derive instance Newtype NotANewtype _
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
